# Kaleidoscope

./: .gitmodules  .travis.yml  CMakeLists.txt  Consumer_.h  Makefile  Parser.cpp  Parser.h  README.md  library.properties
doc/: Doxyfile
examples/: Makefile  sketch.ino
examples/aglais/: IO_protocoll.agl  tests.h
examples/all_actions/: tests.h
examples/all_assertions/: .kaleidoscope-builder.conf  Makefile  all_assertions.ino  tests.h
src/: AbsoluteMouseReport.cpp  AbsoluteMouseReport.h  ActionContainer.h  ActionContainer_Impl.h  ActionQueueAdaptor.h  Aglais.cpp  Aglais.h  AglaisInterface.cpp  AglaisInterface.h  AssertionContainer.h  AssertionContainer_Impl.h  AssertionQueue.cpp  AssertionQueue.h  AssertionQueueAdaptor.h  AssertionQueueBundle.cpp  AssertionQueueBundle.h  AssertionQueue_Impl.h  AssertionsQueue.cpp  AssertionsQueue.h  Consumer_.h  Driver.cpp  Driver.h  Kaleidoscope-Simulator.h  Kaleidoscope-Testing.cpp  Kaleidoscope-Testing.h  KeyboardReport.cpp  KeyboardReport.h  LED_Checks.cpp  LED_Checks.h  MouseReport.cpp  MouseReport.h  Papilio.h  Simulator.cpp  Simulator.h  SimulatorCore_.h  TestDriver.cpp  TestDriver.h  Visualization.cpp  Visualization.h
src/actions/: Action_.cpp  Action_.h  AssertCycleIsNth.h  AssertElapsedTimeGreater.h  AssertLayerIsActive.h  AssertNumOverallReportsEquals.h  AssertTopActiveLayerIs.h  CustomAction.h  Grouped.cpp  Grouped.h
src/aglais/: Aglais.cpp  Consumer_.h
src/assertions/: Assertion_.cpp  Assertion_.h  CustomAssertion.h  (+15 more)
tools/: aglais_compress.cpp_  aglais_convert.cpp_
v1/: Grammar.h  Parser.cpp  Parser.h
(+153 files in other folders)
